# sf3d-web-tool

./: .dockerignore  .gitignore  AGENTS.md  PLANS.md  README.md  docker-compose.yml
.codex/: config.toml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: generation.py  health.py  jobs.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/services/: inference.py  local_preview.py  masking.py  preprocess.py  runner_diagnostics.py  runtime_diagnostics.py  storage.py
backend/sf3d_web_tool_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_generation_contract.py  test_health.py  test_local_preview.py  test_preprocess.py
docs/: PROJECT_PLAN.md  RUNTIME_MODES.md
frontend/: .env.example  AGENTS.md  Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  tsconfig.typecheck.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/[...backendPath]/: route.ts
frontend/components/: inspector-panel.tsx  upload-panel.tsx  viewer-panel.tsx
frontend/lib/: config.ts  types.ts
plans/: 2026-03-23-runtime-alignment.md
scripts/: dev.ps1  patch_windows_torch_cuda_header.py  rebuild_sf3d_windows_cuda.ps1
